--- a/app/app/pages/app/parts/main-menu-navigation/MainMenuNavigationPart.scss
+++ b/app/app/pages/app/parts/main-menu-navigation/MainMenuNavigationPart.scss
@@ -49,6 +49,7 @@
   line-height: $line-height-medium;
   font-weight: $font-weight-regular;
   color: $black-color;
+  text-decoration: none;
 }
 
 .navigation-link-active {
